--- a/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/pexcel/records/formula/package.html
+++ b/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/pexcel/records/formula/package.html
@@ -55,18 +55,13 @@
  #
  -->
 
-  <title>org.openoffice.xmerge.converter.xml.sxc.pexcel.records package</title>
+  <title>org.openoffice.xmerge.converter.xml.sxc.pexcel.records.formula package</title>
    
 </head>
   <body bgcolor="white">
 
-<p> This package contains the objects that represent BIFF Records for the
-pocket excel format. Each one implements the BIFF Record abstract class which
-contains three basic functions (read, write and getBiffType). BIFF Records
-which are not used do not contain setter's or getter's for their member
-variables as some records have a large number of variables. It should be up
-to the implementer which attributes get set and which get set to default
-values.</p>
+<p> This package contains the classes necessary for converting pexcel formula
+to and from StarCalc Formula.</p>
 
 </body>
 </html>
